--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <meta name="description" content="Александр Трошков, Веб разработчик">
     <meta name="author" content="Alexander Troshkov">
     <!-- Global CSS -->
-    <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css">
-    <link id="theme-style" rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
+    <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="/assets/images/portrait.jpg" alt="" />
+                <img class="profile" src="assets/images/portrait.jpg" alt="" />
                 <h1 class="name">Александр Трошков</h1>
                 <h3 class="tagline">Веб разработчик</h3>
             </div><!--//profile-container-->
@@ -29,7 +29,7 @@
                     <li class="website"><i class="fa fa-globe"></i><a href="http://rudotcom.github.io" target="_blank">rudotcom.github.io</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/troshkov/" target="_blank">linkedin.com</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/rudotcom</a></li>
-                    <li class="instructables"><img src="/assets/images/instructables-logo-v2.png"> <a href="https://www.instructables.com/member/AlexanderTRU/" target="_blank">instructables.com</a></li>
+                    <li class="instructables"><img src="assets/images/instructables-logo-v2.png"> <a href="https://www.instructables.com/member/AlexanderTRU/" target="_blank">instructables.com</a></li>
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
