--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/portrait.jpg" alt="" />
+                <img class="profile" src="assets/images/port.png" alt="" />
                 <h1 class="name">Александр Трошков</h1>
                 <h3 class="tagline">Веб разработчик</h3>
             </div><!--//profile-container-->
@@ -113,7 +113,7 @@
                             Перевод во время монтажа технологического оборудования, тренингов, пуско-наладочных работ.
                             Перевод технической документации.
                         </p>
-                        <p>Powershell, Autoit, MS Office macros, PHP/MySQL</p>
+                        <p>MS Exchange, Hyper-V, Powershell, Autoit, MS Office macros, PHP/MySQL</p>
                         <p>Автоматизация процессов, есть личные проекты по IoT (программирование контроллеров). </p>
                         
                     </div><!--//details-->
