--- a/index.html
+++ b/index.html
@@ -76,8 +76,14 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Цели</h2>
                 <div class="summary">
-                    <p>Имея предыдущий опыт веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
-                        Python/Django с использованием CI/CD. Восхищен универсальностью языка Python. </p>
+                    <p>
+                        Имея предыдущий опыт веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
+                        Python/Django с использованием CI/CD. Восхищен универсальностью и возможностями языка Python.
+                        Хочу найти команду с разнообразными задачами.
+                    </p>
+                    <p>
+
+                    </p>
                 </div><!--//summary-->
             </section><!--//section-->
             
