--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>
                         Имея предыдущий опыт веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
                         Python/Django с использованием CI/CD. Восхищен универсальностью и возможностями языка Python.
-                        Хочу найти команду с разнообразными задачами для повышения мастерства.
+                        Хочу найти команду с разнообразными задачами в интересном проекте для повышения мастерства.
                     </p>
                     <p>
 
