--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="contact-container container-block">
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fa fa-envelope"></i><a href="mailto: rudotcom@gmail.com">rudotcom@gmail.com</a></li>
-                    <li class="website"><i class="fa fa-globe"></i><a href="http://rudotcom.github.io" target="_blank">rudotcom.github.io</a></li>
+                    <li class="website"><i class="fa fa-globe"></i><a href="#" target="_blank">rudotcom.github.io</a></li>
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://www.linkedin.com/in/troshkov/" target="_blank">linkedin.com</a></li>
-                    <li class="github"><i class="fa fa-github"></i><a href="#" target="_blank">github.com/rudotcom</a></li>
+                    <li class="github"><i class="fa fa-github"></i><a href="https://github.com/rudotcom/" target="_blank">github.com/rudotcom</a></li>
                     <li class="instructables"><img src="assets/images/instructables-logo-v2.png"> <a href="https://www.instructables.com/member/AlexanderTRU/" target="_blank">instructables.com</a></li>
                 </ul>
             </div><!--//contact-container-->
