--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <div class="company">Агентство Русской Информации</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Участие в разработка архитектуры и движка новостного агентства. Perl/MySQL </p>
+                        <p>Участие в разработка архитектуры и движка новостного агентства. Perl/MySQL, HTML/CSS </p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
