--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                         Имея предыдущий опыт веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
                         Python/Django с использованием CI/CD. Восхищен универсальностью и возможностями языка Python.
                         Хочу найти команду с разнообразными задачами в интересном проекте для повышения мастерства.
+                        Даже <a href="Трошков%20Александр.pdf">резюме</a> запилил.
                     </p>
                     <p>
 
