--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Цели</h2>
                 <div class="summary">
                     <p>
-                        Имея предыдущий опыт веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
+                        Имея <a href="Трошков%20Александр.pdf">предыдущий опыт</a> веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
                         Python/Django с использованием CI/CD. Восхищен универсальностью и возможностями языка Python.
                         Хочу найти команду с разнообразными задачами в интересном проекте для повышения мастерства.
-                        Даже <a href="Трошков%20Александр.pdf">резюме</a> запилил.
+
                     </p>
                     <p>
 
