--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>
                         Имея <a href="Трошков%20Александр.pdf">предыдущий опыт</a> веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
                         Python/Django с использованием CI/CD. Восхищен универсальностью и возможностями языка Python.
-                        Хочу найти команду с разнообразными задачами в интересном проекте для повышения мастерства.
+                        Хочу найти команду с разнообразными задачами в интересном проекте для развития мастерства.
 
                     </p>
                     <p>
