--- a/index.html
+++ b/index.html
@@ -77,9 +77,11 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Цели</h2>
                 <div class="summary">
                     <p>
-                        Имея <a href="Трошков%20Александр.pdf">предыдущий опыт</a> веб разработки в Perl, PHP/MySQL, включился в изучение и разработку на
-                        Python/Django с использованием CI/CD. Восхищен универсальностью и возможностями языка Python.
+                        Имея <a href="Трошков%20Александр.pdf">предыдущий опыт</a> веб разработки в Perl, PHP/MySQL,
+                        включился в изучение и разработку на Python/Django с использованием CI/CD.
+                        Восхищен универсальностью и возможностями языка Python.
                         Хочу найти команду с разнообразными задачами в интересном проекте для развития мастерства.
+                        <p>Есть опыт написания телеграм ботов, голосовых ботов</p>
 
                     </p>
                     <p>
@@ -101,7 +103,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Full stack разработчик в проекте по сбору и обслуживанию корпоративных массивов данных</p>
-                        <p>Linux, Apache, PHP/MySQL, HTML/CSS, Tor, Autoit, Powershell</p>
+                        <p>Linux, Apache, PHP/MySQL, HTML/CSS, JavaScript, Tor, Autoit, Powershell</p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
