--- a/index.html
+++ b/index.html
@@ -141,6 +141,19 @@
                     </div><!--//details-->
                 </div><!--//item-->
                 
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Руководитель службы поддержки</h3>
+                            <div class="time">2007 - 2008</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Bastion Group, поставщик ПО для дилеров Тойота</div>
+                    </div><!--//meta-->
+                    <div class="details">
+                        <p>Руководство сбором требований заказчиков, составлением и ведением заданий для отдела разработки</p>
+                    </div><!--//details-->
+                </div><!--//item-->
+
             </section><!--//section-->
 
             
