--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                     </div><!--//meta-->
                     <div class="details">
                         <p>Full stack разработчик в проекте по сбору и обслуживанию корпоративных массивов данных</p>
+                        <p>Python, Django, DRF, CI/CD, Git</p>
                         <p>Linux, Apache, PHP/MySQL, HTML/CSS, JavaScript, Tor, Autoit, Powershell</p>
                     </div><!--//details-->
                 </div><!--//item-->
