--- a/index.html
+++ b/index.html
@@ -77,12 +77,9 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Цели</h2>
                 <div class="summary">
                     <p>
-                        Имея <a href="Трошков%20Александр.pdf">предыдущий опыт</a> веб разработки в Perl, PHP/MySQL,
-                        включился в изучение и разработку на Python/Django с использованием CI/CD.
-                        Восхищен универсальностью и возможностями языка Python.
+                        <a href="Трошков%20Александр.pdf">Предыдущий опыт веб разработки в Perl, PHP/MySQL</a>,
+                        Сейчас работаю с Python/Django, DRF, Git, CI/CD.
                         Хочу найти команду с разнообразными задачами в интересном проекте для развития мастерства.
-                        <p>Есть опыт написания телеграм ботов, голосовых ботов</p>
-
                     </p>
                     <p>
 
