--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <ul class="list-unstyled interests-list">
                     <li>Русский <span class="lang-desc">(родной)</span></li>
                     <li>English <span class="lang-desc">(Professional)</span></li>
+                    <li>Español <span class="lang-desc">(Basic)</span></li>
                     <li>ภาษาไทย<span class="lang-desc">(พื้นฐาน)</span></li>
                 </ul>
             </div><!--//interests-->
@@ -78,8 +79,13 @@
                 <div class="summary">
                     <p>
                         <a href="Трошков%20Александр.pdf">Предыдущий опыт веб разработки в Perl, PHP/MySQL</a>,
-                        Сейчас работаю с Python/Django, DRF, Git, CI/CD.
-                        Хочу найти команду с разнообразными задачами в интересном проекте для развития мастерства.
+                        <ul>Сейчас работаю со стеком
+                            <li> Python/Django</li>
+                            <li>Postgres, celery + redis</li>
+                            <li>linux, gunicorn, nginx</li>
+                            <li>API (DRF), Git, CI/CD (GitLab, Jira)</li>
+                        </ul>
+                        Интересны совместные проекты по веб разработке.
                     </p>
                     <p>
 
