--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                             <h3 class="job-title">Web developer / System analyst</h3>
                             <div class="time">until now</div>
                         </div><!--//upper-row-->
-                        <div class="company">Freelance</div>
+                        <div class="company">ОАО "Архбум", Corrugated board production (again)</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Full stack developer in a corporate data collection and maintenance project</p>
-                        <p>Python, Django, DRF, CI/CD, Git</p>
-                        <p>Linux, Apache, PHP/MySQL, HTML/CSS, JavaScript, Tor, Autoit, Powershell</p>
+                        <p>Business process analysis. Data analysis. Development of analytical computation platform python/django/postgres/pandas.
+                            Development of planning, analytical algorithms.  Kerberos authorization.
+                        <p>Configuring and set up of linux server and environment via CI/CD using git. </p>
+                        <p>SCRUM / Jira</p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
@@ -192,7 +193,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">jira, SCRUM, </h3>
+                        <h3 class="level-title">Jira, SCRUM, </h3>
                     </div><!--//item-->
 
                     <div class="item">
