--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <h3 class="job-title">Web developer / System analyst</h3>
                             <div class="time">until now</div>
                         </div><!--//upper-row-->
-                        <div class="company">ОАО "Архбум", Corrugated board production (again)</div>
+                        <div class="company">АО "Архбум", Corrugated board production (once again, why not:)</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Business process analysis. Data analysis. Development of analytical computation platform python/django/postgres/pandas.
