--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
                 <h2 class="section-title"><i class="fa fa-user"></i>Goals</h2>
                 <div class="summary">
                     <p>
-                        <a href="assets/Troshkov Alexander.pdf">CV</a>,
                         <ul>Current stack
                             <li>Python/Django/pandas</li>
                             <li>Postgres, celery + redis</li>
@@ -87,15 +86,15 @@
                         </ul>
                         Interested in joint web development projects.
                     </p>
-                    <p>
-
-                    </p>
                 </div><!--//summary-->
             </section><!--//section-->
             
             <section class="section experiences-section">
                 <h2 class="section-title"><i class="fa fa-briefcase"></i>Experience</h2>
-                
+                    <p>
+                        <a href="assets/Troshkov Alexander.pdf">CV</a>,
+                    </p>
+
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
@@ -193,7 +192,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">Jira, SCRUM, </h3>
+                        <h3 class="level-title">Jira, SCRUM</h3>
                     </div><!--//item-->
 
                     <div class="item">
