--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <ul class="list-unstyled interests-list">
                     <li>Русский <span class="lang-desc">(native)</span></li>
                     <li>English <span class="lang-desc">(Professional)</span></li>
+                    <li>Español <span class="lang-desc">(Basic)</span></li>
+                    <li>ภาษาไทย<span class="lang-desc">(พื้นฐาน)</span></li>
                 </ul>
             </div><!--//interests-->
             
@@ -80,7 +82,7 @@
                             <li>Python/Django/pandas</li>
                             <li>Postgres, celery + redis</li>
                             <li>linux, gunicorn, nginx</li>
-                            <li>API (DRF), Git, CI/CD (GitLab, Jira)</li>
+                            <li>API (DRF), Git, CI/CD, Docker (docker-compose)</li>
                         </ul>
                         Interested in joint web development projects.
                     </p>
@@ -96,23 +98,15 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Lead developer </h3>
+                            <h3 class="job-title">Web developer / System analyst</h3>
                             <div class="time">until now</div>
                         </div><!--//upper-row-->
-                        <div class="company">АО "Архбум", Corrugated board production </div>
+                        <div class="company">АО "Архбум", Corrugated board production</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>As a lead developer, I am responsible for overseeing the technical aspects of our projects. 
-                            I design, implement, and maintain software applications that meet business requirements. 
-                            I work with project managers, stakeholders, and team members to identify project goals, 
-                            define timelines, allocate resources, and ensure timely delivery. I also mentor and train 
-                            junior developer, review code, conduct quality assurance testing, troubleshoot issues, 
-                            and stay up-to-date with emerging technologies. I am responsible for advocating for best 
-                            practices, communicating progress, monitoring other developers, and providing technical 
-                            guidance to the team. I ensure team productivity and adherence to quality standards. 
-                            As a lead developer, I am considered as the bridge between the development team and management 
-                            and am equipped with the programming expertise and experience, which allows me to communicate effectively between parties.
-                        <p>Configuring and set up of linux server and environment via CI/CD using git. </p>
+                        <p>Business process analysis. Data analysis. Development of analytical computation platform python/django/postgres/pandas.
+                            Development of planning, analytical algorithms.  Kerberos authorization.
+                        <p>Configuring and set up of linux server and environment via CI/CD Git Docker. </p>
                         <p>SCRUM / Jira</p>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -194,7 +188,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">git, github, Linux, Apache, nginx</h3>
+                        <h3 class="level-title">git, github, Docker, Linux, Apache, nginx</h3>
                     </div><!--//item-->
 
                     <div class="item">
