--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <ul>Current stack
                             <li>Python/Django/pandas</li>
                             <li>Postgres, celery + redis</li>
-                            <li>linux, gunicorn, nginx</li>
+                            <li>Linux, Docker, nginx</li>
                             <li>API (DRF), Git, CI/CD, Docker (docker-compose)</li>
                         </ul>
                         Interested in joint web development projects.
