--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <li>Python/Django/pandas</li>
                             <li>Postgres, celery + redis</li>
                             <li>Linux, Docker, nginx</li>
-                            <li>API (DRF), Git, CI/CD, Docker (docker-compose)</li>
+                            <li>API (DRF), CI/CD, Git, docker-compose</li>
                         </ul>
                         Interested in joint web development projects.
                     </p>
