--- a/index.html
+++ b/index.html
@@ -104,9 +104,10 @@
                         <div class="company">АО "Архбум", Corrugated board production</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Business process analysis. Data analysis. Development of analytical computation platform python/django/postgres/pandas.
-                            Development of planning, analytical algorithms.  Kerberos authorization.
-                        <p>Configuring and set up of linux server and environment via CI/CD Git Docker. </p>
+                        <p>Business process analysis. Data analysis. Full stack development of analytical computation platform python/django/pandas.
+                            Development of planning, analytical algorithms. Kerberos authorization.</p>
+                        <p>Configuring and maintaining Linux server environments via CI/CD Git Docker. </p>
+                        <p>Implementation of various open source projects in corporate environment.</p> 
                         <p>SCRUM / Jira</p>
                     </div><!--//details-->
                 </div><!--//item-->
