--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
         <div class="main-wrapper">
             
             <section class="section summary-section">
-                <h2 class="section-title"><i class="fa fa-user"></i>Goals</h2>
+                <h2 class="section-title"><i class="fa fa-user"></i>Current stack</h2>
                 <div class="summary">
                     <p>
-                        <ul>Current stack
+                        <ul>
                             <li>Python/Django/pandas</li>
                             <li>Postgres, celery + redis</li>
                             <li>Linux, Docker, nginx</li>
                             <li>API (DRF), CI/CD, Git, docker-compose</li>
+                            <li>IoT (smart home), local LLMs, voice assistants</li>
                         </ul>
                         Interested in joint web development projects.
                     </p>
