--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <li>Python/Django/pandas</li>
                             <li>Postgres, celery + redis</li>
                             <li>linux, gunicorn, nginx</li>
-                            <li>API (DRF), Git, CI/CD (GitLab, Jira)</li>
+                            <li>API (DRF), Git, CI/CD, Docker (docker-compose)</li>
                         </ul>
                         Interested in joint web development projects.
                     </p>
@@ -101,12 +101,12 @@
                             <h3 class="job-title">Web developer / System analyst</h3>
                             <div class="time">until now</div>
                         </div><!--//upper-row-->
-                        <div class="company">АО "Архбум", Corrugated board production (once again, why not:)</div>
+                        <div class="company">АО "Архбум", Corrugated board production</div>
                     </div><!--//meta-->
                     <div class="details">
                         <p>Business process analysis. Data analysis. Development of analytical computation platform python/django/postgres/pandas.
                             Development of planning, analytical algorithms.  Kerberos authorization.
-                        <p>Configuring and set up of linux server and environment via CI/CD using git. </p>
+                        <p>Configuring and set up of linux server and environment via CI/CD Git Docker. </p>
                         <p>SCRUM / Jira</p>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -188,7 +188,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">git, github, Linux, Apache, nginx</h3>
+                        <h3 class="level-title">git, github, Docker, Linux, Apache, nginx</h3>
                     </div><!--//item-->
 
                     <div class="item">
