--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <li>Python/Django/pandas</li>
                             <li>Postgres, celery + redis</li>
                             <li>Linux, Docker, nginx</li>
-                            <li>API (DRF), CI/CD, Git, docker-compose</li>
+                            <li>API (DRF), CI/CD, Git, Docker (docker-compose)</li>
                             <li>IoT (smart home), local LLMs, voice assistants</li>
                         </ul>
                         Interested in joint web development projects.
@@ -99,7 +99,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Web developer / System analyst</h3>
+                            <h3 class="job-title">Lead Web developer / System analyst</h3>
                             <div class="time">until now</div>
                         </div><!--//upper-row-->
                         <div class="company">АО "Архбум", Corrugated board production</div>
@@ -158,7 +158,7 @@
                         <div class="company">Агентство Русской Информации</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Architecturing and development of the news agency portal. Perl/MySQL, HTML/CSS </p>
+                        <p>Architecture and development of the news agency portal. Perl/MySQL, HTML/CSS </p>
                     </div><!--//details-->
                 </div><!--//item-->
                 
