--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="summary">
                     <p>
                         <ul>
-                            <li>Python/Django/pandas</li>
+                            <li>Python/Django/pandas, JS, Bootstrap, HTML5, CSS3</li>
                             <li>Postgres, celery + redis</li>
                             <li>Linux, Docker, nginx</li>
                             <li>API (DRF), CI/CD, Git, Docker (docker-compose)</li>
@@ -105,9 +105,9 @@
                         <div class="company">АО "Архбум", Corrugated board production</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Business process analysis. Data analysis. Full stack development of analytical computation platform python/django/pandas.
-                            Development of planning, analytical algorithms. Kerberos authorization.</p>
-                        <p>Configuring and maintaining Linux server environments via CI/CD Git Docker. </p>
+                        <p>Full stack development of various corporate web services. Business process analysis. Data analysis.
+                            Development of planning, analytical algorithms.</p>
+                        <p>Configuring and maintaining Linux server environments via CI/CD Git Docker. Domain Kerberos authorization.</p>
                         <p>Implementation of various open source projects in corporate environment.</p>
                         <p>SCRUM / Jira</p>
                     </div><!--//details-->
